# ulmcp

./: Cargo.toml  README.md
examples/: agent_workflow.rs  ecosystem_smoke_test.py
src/: client.rs  context.rs  lib.rs  prompt.rs  registry.rs  resource.rs  server.rs  tool.rs
src/mcp/: adapter.rs  mod.rs  types.rs
src/transport/: mod.rs  native.rs  stdio.rs
