[package]
name = "ulmcp"
version = "0.1.0"
edition = "2021"
authors = ["El Mehdi Makroumi"]
description = "Ulmen Context Protocol: native tool protocol for agentic AI"
license = "BUSL-1.1"

[lib]
name = "ulmcp"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
ulmen-core = { path = "../lumen/ulmen-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
uldb = { path = "../uldb" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
